_sass/_main2.scss
@use "sass:list";

:root {
  color-scheme: light;

  --color50: #e5e5e5;
  --color100: #ffd95b;
  --color800: #4E342E;

  --colorLight: var(--color100);
  --colorPrimary: #ffa726;
  --colorDark: #c77800;
  --colorGrey: #cacaca;
  --text: #000;
  --textLight: #fff;
  --link: var(--colorDark);
  --bg: #fafafa;
  --notiBg: #cce7ff;
  --sidebar-header: var(--colorPrimary);
  --sidebar: var(--color100);

  --mask-filter: brightness(0);

  --sectionHeader: rgb(94 203 140);
  --sectionBg: #d3f8eb;

  --fire: #f07d75;
  --water: #88bcff;
  --earth: #5fcb58;
  --light: #ffb251;
  --shadow: #b88dff;

  --silver: #d0d0d0;
  --gold: linear-gradient(195deg, #f0b050, #ffe080, #f0b050);
  --rainbow: linear-gradient(195deg, #ff8080, #ffff80, #80ff80, #80ffff, #8080ff);
}

html[data-theme="dark"] {
  color-scheme: dark;

  --color50: #333;
  --colorPrimary: #F57F17;
  --colorLight: #F9A825;
  --colorGrey: #555;

  --text: #fff;
  --link: var(--color100);
  --bg: #0f0f1f;
  --notiBg: #11538d;
  --sectionHeader: rgb(18, 195, 92);
  --sectionBg: #077c53;
  --sidebar-header: #000;
  --sidebar: var(--color800);

  --mask-filter: brightness(1);

  --fire: #a50b00;
  --water: #0c4b9e;
  --earth: #087800;
  --light: #c97e1a;
  --shadow: #59398b;

  --silver: #7f7f7f;
  --gold: linear-gradient(195deg, #b1813a, #c4a95b, #b9873d);
  --rainbow: linear-gradient(195deg, #b53737, #c1ad3b, #37b237, #3aadad, #3737b4);
}

*, *:before, *:after {
  box-sizing: border-box;
}
html, body {
  font: 400 16px Roboto, Arial, sans-serif;
  color:  var(--text);
  margin: 0;
  padding: 0;
  height: 100%;
}
body {
  display: flex;
  flex-direction: column;
  background-color: var(--bg);
}
header, .page-header, .pager, footer {
  flex: none;
}
header {
  padding: 18px 0;
}
.clearfix:before, .clearfix:after {
  content: '';
  clear: both;
  display: table;
}
.wiki-msg {
  padding: 10px;
  background: var(--notiBg);
}
a {
  color: var(--link);
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}
.page-header {
  padding: 30px 0;
}
.page-header h1 {
  margin: 22px 0;
}
.page-header a {
  color: var(--colorPrimary);
}
.sidebar {
  contain: content;
  background: var(--sidebar);
  visibility: hidden;
  width: 250px;
  position: fixed;
  transform: translateX(-250px);
  transition: transform 0.15s ease;
  z-index: 2;
  height: 100vh;
  -webkit-overflow-scrolling: touch;
}
.sidebar--is-visible {
  transform: translateX(0);
  visibility: visible;
}
.sidebar__logo {
  background-color: var(--sidebar-header);
  border-bottom: 1px solid var(--colorDark);
  height: 130px;
  /*font-size: 36px;
  line-height: 130px;
  margin-bottom: 0;
  text-align: center;*/
}
.sidebar__logo img {
  filter: drop-shadow(0 0 0.25rem #fff);
}
.sidebar__nav {
  max-height: calc(100% - 130px);
  overflow-y: auto;
}
.sidebar__nav-interior {
  height: 100%;
  padding: 40px;
}
.sidebar a {
  color: var(--text);
}
.section__header {
  font-size: 1em;
  text-decoration: none;
  margin-top: 0;
  margin-bottom: 10px;
}
.sidebar li {
  list-style: square;
}
.search-box {
  margin-bottom: 20px;
  width: 100%;
  height: 30px;
  border: 2px solid #888;
  border-radius: 2px;
}
.toolbar {
  margin: 20px 0;
}
.menu-button, .github-button {
  display: inline-block;
  font-size: 16px;
  background: none;
  border: none;
  padding: 6px;
  margin-right: 10px;
  color: var(--text);
}
.github-button {
  float: right;
}
.menu-button:hover, .github-button:hover {
  text-decoration: none;
  background-color: var(--color50);
  transition: background-color 0.5s ease-out;
}
.content__area {
  width: 100%;
  padding-bottom: 40px;
}
.content {
  max-width: 900px;
  margin: 0 auto;
  padding: 0 40px;
}
.content__wider {
  padding: 0 40px;
}
.content__overlay {
  background: rgba(0,0,0,0.4);
  width: 100%;
  height: 100vh;
  position: fixed;
  z-index: 1;
  display: none;
}
.content__overlay--is-active {
  display: block;
}
@media (min-width: 768px) {
  .sidebar {
    transform: translateX(0);
    visibility: visible;
  }
  .content__area {
    padding: 40px 40px 40px 290px;
  }
  .menu-button {
    display: none;
  }
}
main {
  flex: 1 0 auto;
}
article {
  margin-bottom: 80px;
  line-height: 1.25;
}
h1, h2, h3, h4 {
  line-height: 1;
  font-weight: 600;
  margin: 40px 0 20px;
}
h1 {
  font-size: 32px;
  font-weight: 400;
}
h2 {
  font-size: 24px;
}
h3 {
  font-size: 20px;
}
h4 {
  font-size: 16px;
}
.meta {
  font-size: 14px;
  margin-bottom: 20px;
}
time {
  background: no-repeat url("data:image/svg+xml,%3Csvg width='14' height='16' viewBox='0 0 14 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M13 2h-1v1.5c0 .28-.22.5-.5.5h-2c-.28 0-.5-.22-.5-.5V2H6v1.5c0 .28-.22.5-.5.5h-2c-.28 0-.5-.22-.5-.5V2H2c-.55 0-1 .45-1 1v11c0 .55.45 1 1 1h11c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm0 12H2V5h11v9zM5 3H4V1h1v2zm6 0h-1V1h1v2zM6 7H5V6h1v1zm2 0H7V6h1v1zm2 0H9V6h1v1zm2 0h-1V6h1v1zM4 9H3V8h1v1zm2 0H5V8h1v1zm2 0H7V8h1v1zm2 0H9V8h1v1zm2 0h-1V8h1v1zm-8 2H3v-1h1v1zm2 0H5v-1h1v1zm2 0H7v-1h1v1zm2 0H9v-1h1v1zm2 0h-1v-1h1v1zm-8 2H3v-1h1v1zm2 0H5v-1h1v1zm2 0H7v-1h1v1zm2 0H9v-1h1v1z'%3E%3C/path%3E%3C/svg%3E");
  padding-left: 20px;
}
.author {
  background: no-repeat url("data:image/svg+xml,%3Csvg width='17' height='17' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z'/%3E%3C/svg%3E");
  padding-left: 20px;
}
p, ul, ol, table, pre, dl {
  margin: 20px 0;
}
ul ul, ol ol, ul ol, ol ul {
  margin: 0;
}
ul, ol {
  padding-left: 24px;
}
li {
  line-height: 1.5;
}
.footnotes {
  border-top: 1px dotted;
  margin-top: 40px;
  padding-top: 20px;
}
#markdown-toc, #timeline {
  list-style: none;
  padding-left: 8px;
}
#markdown-toc {
  border-left: 4px solid var(--colorLight);
}
#markdown-toc li {
  list-style: none;
}
img {
  max-width: 100%;
  height: auto;
}
/* ... */

